# miet-video-backend

./: .gitignore  CMakeLists.txt  Makefile  README.md  db_dump  docker-compose.yaml
.github/workflows/: c-cpp.yml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgres/data/test/: initial_data.sql
postgres/migrations/: 002_migration.sql
postgres/schemas/: db_dev.sql  miet_video_db.sql
postgres/schemas/test/: db_test.sql  miet_video_db_test.sql
postgres/scripts/: select_all_users_dev.sql
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/miet/clients/: orioks_client.cpp  orioks_client.hpp  s3_client.cpp  s3_client.hpp
src/miet/clients/abstract/: orioks_client_base.cpp  orioks_client_base.hpp  s3_client_base.hpp
src/miet/db/: db_component.cpp  db_component.hpp
src/miet/db/managers/: auth_tokens_manager.cpp  auth_tokens_manager.hpp  sessions_manager.cpp  sessions_manager.hpp  users_manager.cpp  users_manager.hpp
src/miet/db/managers/abstract/: auth_tokens_manager_base.cpp  auth_tokens_manager_base.hpp  comments_manager_base.hpp  lectures_manager_base.hpp  sessions_manager_base.cpp  sessions_manager_base.hpp  users_manager_base.hpp  videos_manager_base.hpp
src/miet/db/managers/postgres/: auth_tokens_manager.cpp  auth_tokens_manager.hpp  comments_manager.cpp  comments_manager.hpp  lectures_manager.cpp  lectures_manager.hpp  sessions_manager.cpp  sessions_manager.hpp  users_manager.cpp  users_manager.hpp  videos_manager.cpp  videos_manager.hpp
src/miet/db/tables/: users_table.hpp
src/miet/errors/: builder.cpp  builder.hpp
src/miet/errors/ut/: ut_builder.cpp
src/miet/handlers/: add_comment_handler.cpp  add_comment_handler.hpp  authorization_handler.cpp  authorization_handler.hpp  comments_notify_handler.cpp  comments_notify_handler.hpp  get_comments_handler.cpp  get_comments_handler.hpp  get_lecture_handler.cpp  get_lecture_handler.hpp  get_lectures_handler.cpp  get_lectures_handler.hpp  logout_handler.cpp  logout_handler.hpp  registration_handler.cpp  registration_handler.hpp  study_disciplines_handler.cpp  study_disciplines_handler.hpp  upload_lecture_handler.cpp  upload_lecture_handler.hpp  user_info_handler.cpp  user_info_handler.hpp
src/miet/handlers/helpers/: helpers.cpp  helpers.hpp
src/miet/models/: comment.cpp  comment.hpp  lecture.cpp  lecture.hpp  session.cpp  session.hpp  student.cpp  student.hpp  study_discipline.cpp  study_discipline.hpp  types.hpp  user.cpp  user.hpp  user_registration_data.cpp  user_registration_data.hpp  video.cpp  video.hpp
src/miet/queues/: comments_notification_queue.cpp  comments_notification_queue.hpp
src/miet/queues/base/: comments_notification_queue_base.hpp
src/miet/utils/: json.cpp  json.hpp  utils.cpp  utils.hpp
src/miet/utils/ut/: ut_json.cpp
tests/: conftest.py  run_as_user.sh  test_basic.py
tests/authorization_handler/: test_authorization.py
tests/registration_handler/: test_registration.py
